[gd_scene load_steps=10 format=3 uid="uid://bk1hx0kj81771"]

[ext_resource type="Script" path="res://scripts/explosion.gd" id="1_lp3wv"]
[ext_resource type="Texture2D" uid="uid://xkqy8nd5h4qa" path="res://assets/bullets/orb.png" id="2_3g3tc"]
[ext_resource type="Texture2D" uid="uid://cqv5oyfusaooq" path="res://assets/bullets/orb_explosion.png" id="2_m5ur2"]
[ext_resource type="AudioStream" uid="uid://bjiooon3630pv" path="res://assets/sounds/explosion.mp3" id="15_nxsdq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w15ai"]
radius = 63.0079

[sub_resource type="Animation" id="Animation_6k2jb"]
resource_name = "Explosion"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Grenade Hit/GrenadeHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion Sound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("15_nxsdq")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_m5ur2")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_xxyuj"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41r8v"]
_data = {
"Explosion": SubResource("Animation_6k2jb"),
"RESET": SubResource("Animation_xxyuj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_y07ft"]
radius = 592.001

[node name="Grenade" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_lp3wv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(15, 10.6597)
scale = Vector2(1.11932, 1.10608)
texture = ExtResource("2_3g3tc")

[node name="Enemy Detection" type="Area2D" parent="."]

[node name="Detection" type="CollisionShape2D" parent="Enemy Detection"]
position = Vector2(4, 9)
shape = SubResource("CircleShape2D_w15ai")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_41r8v")
}

[node name="Grenade Hit" type="Area2D" parent="."]

[node name="GrenadeHitbox" type="CollisionShape2D" parent="Grenade Hit"]
position = Vector2(3, 7)
shape = SubResource("CircleShape2D_y07ft")
disabled = true
debug_color = Color(0.612686, 0.371389, 0.97783, 0.42)

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Explosion Sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Enemy Detection" to="." method="_on_enemy_detection_body_entered"]
[connection signal="body_entered" from="Grenade Hit" to="." method="_on_grenade_hit_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
